[package]
name = "rfm69"
version = "0.5.0"
authors = ["Ales Musil <aedvin1@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["rfm69", "driver", "hal"]
categories = ["embedded", "hardware-support"]
repository = "https://github.com/almusil/rfm69"
description = "A generic rust driver to support RFM69 family wireless chips"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
anyhow = "1.0"
embedded-hal-bus = { version = "0.1.0", features = ["std"] }
linux-embedded-hal = "0.4.0"
utilities = { path = "utilities" }
